--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
     ],
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "firebase/php-jwt": "^6.10"
+        "firebase/php-jwt": "^6.10",
+        "ext-pdo": "*",
+        "ext-pdo_mysql": "*",
+        "zircote/swagger-php": "^4.11",
+        "doctrine/annotations": "^2.0"
     }
 }
